<resources>
    <string name="app_name">ICT Application</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Integrity</string>
    <string name="slide_1_desc">Conscience : Behavior / actions that are consistent with the company philosophy</string>

    <string name="slide_2_title">Positive Attitude</string>
    <string name="slide_2_desc">Respect for others</string>

    <string name="slide_3_title">Commitment</string>
    <string name="slide_3_desc">Strive to be the best : Work wholeheartedly / totally, not half measures</string>

    <string name="slide_4_title">Continuous Improvement</string>
    <string name="slide_4_desc">Data accuracy : Data yang sesuai dengan fakta/kenyataan sebenarnya</string>

    <string name="slide_5_title">Innovative</string>
    <string name="slide_5_desc">Benchmarking : Mencari tahu cara kerja terbaik, dan mengadopsinya untuk meningkatkan kinerja perusahaan</string>

    <string name="slide_6_title">Loyal</string>
    <string name="slide_6_desc">Fraternity : Memelihara semangat: “Kita adalah anggota keluarga besar Sinar Mas”</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>

    <string name="pls">Please Wait...</string>

    <string name="haveacc">I HAVE AN ACCOUNT</string>
    <string name="newacc">CREATE NEW ACCOUNT</string>

    <string name="textlogin">LOGIN</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>

    <string name="autofill_username">Email</string>
    <string name="autofill_password">Password</string>
    <string name="autofill_card">Enter ATM Card Number</string>

    <string name="txtregister">Do not have an account ?</string>
    <string name="reg">Register</string>
    <string name="txtlogin">Already have an account ?</string>
    <string name="log">Login</string>

    <string name="mybtnlogin">LOGIN</string>

    <string name="besideimg">Welcome, </string>
    <string name="profile_name">Your Name</string>

    <string name="btnEditProfile">Edit Profile</string>

    <string name="Courses">Courses</string>
    <string name="Profile">Profile</string>
    <string name="Trans">Books</string>
    <string name="Games">Games</string>
    <string name="About">About App</string>
    <string name="etc">Others</string>

    <string name="tariktunai">m-Tarik Tunai</string>
    <string name="qr">QR</string>
    <string name="admin">m-Admin</string>

    <string name="fullname">Your Fullname</string>
    <string name="your_username">Your Username</string>
    <string name="your_phone">Your Phone Number</string>
    <string name="title_activity_minfo">MInfoActivity</string>

    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_payment">Info</string>
    <string name="title_Commerce">Transfer</string>
    <string name="title_admin">Admin</string>

    <string name="title_activity_mtransfer">MTransferActivity</string>
    <string name="title_activity_mpayment">MPaymentActivity</string>
    <string name="title_activity_mcommerce">MCommerceActivity</string>
    <string name="title_activity_mtarik_tunai">MTarikTunaiActivity</string>
    <string name="title_activity_madmin">MAdminActivity</string>
    <string name="title_activity_mprofile">MProfileActivity</string>
    <string name="title_activity_msettings">MSettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="signin">LOGIN</string>
    <string name="signin1">SIGN IN</string>

    <string name="signup">REGISTER</string>
    <string name="signup1">SIGN UP</string>

    <string name="already">Already have an account ?</string>

    <string name="dont">Do not have an account ?</string>

    <string name="username">Your Email</string>

    <string name="password">Your Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="app_bar_1">ICT Application</string>
    <string name="app_bar_2">My Profile</string>
    <string name="app_bar_3">My Courses</string>
    <string name="app_bar_4">The Games</string>
    <string name="app_bar_5">Books</string>
    <string name="app_bar_6">About App</string>

    <string name="game1">Plane Shooter</string>
    <string name="game2">Word Matters</string>

    <string name="video_text">Fullscreen</string>

    <string name="btnChange">Change Picture</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_list_books">ListBooksActivity</string>

    <string name="about">ICT Application is one of the English Applications, that helps one to understand the basic concepts of Introducing English.
    for that by using you can learn more.</string>

    <string name="footer" formatted="false">\u00A9 October 2019 - ICT Application \n Android Studio Group</string>
</resources>
