<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/study1"
    android:backgroundTintMode="screen">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/app1"
            layout="@layout/activity_app_mybar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/transparant"
                android:orientation="horizontal">

                <com.mikhaellopez.circularimageview.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profileimg"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/besideimg"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_myname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--<Button-->
                        <!--android:id="@+id/btn_editprofile"-->
                        <!--android:layout_width="101dp"-->
                        <!--android:layout_height="23dp"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:background="@drawable/shapeoval1"-->
                        <!--android:text="@string/btnEditProfile"-->
                        <!--android:textColorHint="@android:color/white"-->
                        <!--android:textColor="@android:color/black"-->
                        <!--android:textSize="12sp" />-->

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/transparant"

                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_course"
                        android:layout_width="115dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/shape_menu4"
                        android:drawableTop="@drawable/ic_ondemand_video_black_24dp"
                        android:paddingTop="20dp"
                        android:text="@string/Courses"
                        android:textColor="@android:color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_profile"
                        android:layout_width="115dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/shape_menu1"
                        android:drawableTop="@drawable/user"
                        android:paddingTop="20dp"
                        android:text="@string/Profile"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/transparant"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_books"
                        android:layout_width="115dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/shape_menu2"
                        android:drawableTop="@drawable/course"
                        android:paddingTop="20dp"
                        android:text="@string/Trans"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_games"
                        android:layout_width="115dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/shape_menu3"
                        android:drawableTop="@drawable/games"
                        android:paddingTop="20dp"
                        android:text="@string/Games"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/transparant"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_about"
                        android:layout_width="115dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="18dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/shape_menu"
                        android:drawableTop="@drawable/about_us"
                        android:paddingTop="15dp"
                        android:text="@string/About"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/transparant"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/footer"
                        android:padding="20dp"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

</android.support.constraint.ConstraintLayout>