<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/study1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/app_bar1"
                layout="@layout/activity_app_myprofile">

            </include>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/img_Photo"
                        android:layout_width="195dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@android:color/white"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_changePhoto"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/btnChange"
                    android:background="@drawable/shapeoval2"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/transparant">

                    <TextView
                        android:id="@+id/txt_fullname"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/fullname"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/black"
                        android:layout_margin="10dp">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableStart="@drawable/email_black_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/your_username"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/black"
                        android:layout_margin="10dp">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_myphone"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:text="@string/your_phone"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:background="#90000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/pg_profile"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"/>

    </RelativeLayout>

</RelativeLayout>